# mydetector

./: CMakeLists.txt  LICENSE.txt  README.md
include/gdetector/: gdetector.h
src/: gdetector.cc
tests/: CMakeLists.txt  test_gdetector.cc
